# lib_dzne_workbook

./: README.md  README.rst  pyproject.toml
src/lib_dzne_workbook/: __init__.py  __main__.py
